make my profile prettier

--- a/index.html
+++ b/index.html
@@ -19,6 +19,25 @@
         <a href="https://t.me/cattin0x" target="_blank" class="btn-blue">Contact</a>
       </div>
       <div class="box" id="box2">
+        <h2>
+          Projects
+        </h2>
+        <div class="row">
+          <div class="column">
+            <h3>Kali</h3>
+            <p>No-code/No-lawyer platform that allows you to deploy DAOs plus wrap them with a legal entity</p>
+          </div>
+          <div class="column">
+            <h3>Nani</h3>
+            <p>AI agent </p>
+          </div>
+          <div class="column">
+             <h3>Wrappr</h3>
+            <p>Lorem ipsum</p>
+          </div>
+        </div>
+      </div>
+      <div class="box" id="box2">
         <h2>NFT Gallery</h2>
         <ul class="list-inline" id="NFT-padding">
           <il>
