--- a/index.html
+++ b/index.html
@@ -24,16 +24,16 @@
         </h2>
         <div class="row">
           <div class="column">
-            <h3>Kali</h3>
+            <h3><a href="https://app.kali.gg/" target="_blank">Kali</a></h3>
             <p>No-code/No-lawyer platform that allows you to deploy DAOs plus wrap them with a legal entity</p>
           </div>
           <div class="column">
-            <h3>Nani</h3>
-            <p>AI agent </p>
+            <h3><a href="https://nani.ooo/" target="_blank">Nani</a></h3>
+            <p>AI agent that allows users to search + interact with the chain based on text prompts</p>
           </div>
           <div class="column">
-             <h3>Wrappr</h3>
-            <p>Lorem ipsum</p>
+             <h3><a href="https://www.wrappr.wtf/" target="_blank">Wrappr</a></h3>
+            <p>Legal Wrapper that enables the seemless foramtion of legal entities, limiting liability onchain</p>
           </div>
         </div>
       </div>
