finished profile page

--- a/index.html
+++ b/index.html
@@ -1,76 +1,236 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>My Page</title>
-    <meta name="description" content="Cattin's profile (ﾉ◕ヮ◕)ﾉ*:・ﾟ✧">
-    <meta charset="utf-8">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v6.1.2/css/all.css">
-    <link rel="stylesheet" href="style.css">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-  </head>
-  <body>
-    <div class="container">
-      <div class="box" id="box1">
-        <h1>
-          Hi, I'm Cattin 	ʕ•ᴥ•ʔ
-        </h1>
-        <img src="images/shiro_pfp.png" alt="shiro pfp" id="img-circle">
-        <p> I'm a Bachelor of Laws, currently working on the intersection between code and law @ Kali » trynna learn how to code.</p>
-        <a href="https://t.me/cattin0x" target="_blank" class="btn-blue">Contact</a>
+<head>
+  <meta charset="UTF-8">
+  <title>ʕ•ᴥ•ʔ</title>
+  <link rel="shortcut icon" href="data:image/x-icon;" type="image/x-icon">
+  <!-- Bootstrap -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+  <!-- We need this line below for responsiveness! -->
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="css/style.css">
+</head>
+<body>
+  <iframe id="backgroundFrame" src="https://remilia.market/gods_remix/gen.html#539f62686c66e091a003a5f3a84390371ac3ba23b72f152170fcda46c83a2c09" frameborder="0"></iframe>
+
+<!-- main banner -->
+  <div class="container">
+    <div class="banner">
+      <div class="header">
+        <button id="closeBannerBtn" class="btn-close"></button>
       </div>
-      <div class="box" id="box2">
-        <h2>
-          Projects
-        </h2>
-        <div class="row">
-          <div class="column">
-            <h3><a href="https://app.kali.gg/" target="_blank">Kali</a></h3>
-            <p>No-code/No-lawyer platform that allows you to deploy DAOs plus wrap them with a legal entity</p>
-          </div>
-          <div class="column">
-            <h3><a href="https://nani.ooo/" target="_blank">Nani</a></h3>
-            <p>AI agent that allows users to search + interact with the chain based on text prompts</p>
-          </div>
-          <div class="column">
-             <h3><a href="https://www.wrappr.wtf/" target="_blank">Wrappr</a></h3>
-            <p>Legal Wrapper that enables the seemless foramtion of legal entities, limiting liability onchain</p>
-          </div>
-        </div>
-      </div>
-      <div class="box" id="box2">
-        <h2>NFT Gallery</h2>
-        <ul class="list-inline" id="NFT-padding">
-          <il>
-            <a href="https://opensea.io/assets/ethereum/0x5af0d9827e0c53e4799bb226655a1de152a425a5/5558" target="_blank"><img src="images/spoobs.avif" alt="milady" class="NFT"></a>
-          </il>
-          <il>
-            <a href="https://opensea.io/assets/ethereum/0xb4e570232d3e55d2ee850047639dc74da83c7067/473" target="_blank"><img src="images/future.avif" alt="band bear" class="NFT"></a>
-          </il>
-          <il>
-            <a href="https://opensea.io/assets/ethereum/0x495f947276749ce646f68ac8c248420045cb7b5e/111742181400930061902510359858657921591493830882442799692376905874048592904193" target="_blank"><img src="images/shiro_pfp.png" alt="shiro" class="NFT"></a>
-          </il>
-        </ul>
-      </div>
-      <div class="box" id="box2">
-        <h2>Follow me</h2>
-        <ul class="list-inline">
-          <li>
-            <a href="https://github.com/gcattinp" target="_blank" class="logo">
-              <i class="fa-brands fa-square-github"></i>
-            </a>
-          </li>
-          <li>
-            <a href="https://twitter.com/Cattin0x" target="_blank" class="logo">
-              <i class="fa-brands fa-square-twitter"></i>
-            </a>
-          </li>
-          <li>
-            <a href="https://medium.com/@cattin" target="_blank" class="logo">
-              <i class="fa-brands fa-medium"></i>
-            </a>
-          </li>
-        </ul>
+      <div class="user-info">
+        <img src="images/shiro_pfp.png" alt="shiro pfp">
+        <h4>This User longs for Network Spirituality</h4>
       </div>
     </div>
-  </body>
+  </div>
+  <!-- popup -->
+  <div class="container" id="popupContainer"  style="display:none">
+    <div class="banner-pop">
+      <div class="header-pop">
+        <button id="closePopupBtn" class="btn-close"></button>
+      </div>
+      <div class="projects">
+        <div class="project" id="project-kali">
+          <a href="https://keep.kali.gg/" target="_blank" rel="noopener noreferrer">
+            <img id="kali" src="images/kali_logo.jpg" alt="kali">
+          </a>
+          <p>kali</p>
+        </div>
+        <div class="project" id="project-wrappr">
+          <a href="https://www.wrappr.wtf/"" target="_blank" rel="noopener noreferrer">
+            <img id="wrappr" src="images/wrappr.png" alt="wrappr">
+          </a>
+          <p>wrappr</p>
+        </div>
+        <div class="project" id="project-nani">
+          <a href="https://nani.ooo/" target="_blank" rel="noopener noreferrer">
+            <img id="nani" src="images/nani.jpeg" alt="nani">
+          </a>
+          <p>nani</p>
+        </div>
+      </div>
+    </div>
+  </div>
+  <!-- jpegs -->
+  <div class="container" id="jpegContainer" style="display:none">
+    <div class="banner-jpegs">
+      <div class="header-jpegs">
+        <button id="closeJpegBtn" class="btn-close"></button>
+      </div>
+      <div class="jpegs">
+        <div class="jpeg" id="remilia-folder">
+            <img id="remilia-image" src="images/folder.png" alt="remilia">
+          <p>remilia</p>
+        </div>
+      <div class="jpeg" id="bera-folder">
+          <img id="bera-image" src="images/folder.png" alt="bera">
+        <p>beras</p>
+      </div>
+      <div class="jpeg" id="shiro">
+        <a href="https://opensea.io/assets/ethereum/0x495f947276749ce646f68ac8c248420045cb7b5e/111742181400930061902510359858657921591493830882442799692376905874048592904193" target="_blank" rel="noopener noreferrer">
+          <img id="nani" src="images/shiro_pfp.png" alt="shiro">
+        </a>
+        <p>shiro.png</p>
+      </div>
+      <div class="jpeg" id="radcattin">
+        <a href="https://opensea.io/assets/ethereum/0xce2b3433356a30e6b83661b97ac97d6adf043db5/2" target="_blank" rel="noopener noreferrer">
+          <img id="nani" src="images/radcattin.png" alt="radcattin">
+        </a>
+        <p>radcat.png</p>
+      </div>
+      <div class="jpeg" id="anata">
+        <a href="https://opensea.io/assets/ethereum/0xf729f878f95548bc7f14b127c96089cf121505f8/122" target="_blank" rel="noopener noreferrer">
+          <img id="nani" src="images/anata.png" alt="anata">
+        </a>
+        <p>anata.png</p>
+      </div>
+      </div>
+    </div>
+  </div>
+  <!-- remilia nfts popup -->
+  <div class="container" id="remiliaNftsContainer" style="display:none">
+    <div class="banner-nfts">
+      <div class="header-nfts">
+        <button id="closeRemiliaNftsBtn" class="btn-close"></button>
+      </div>
+      <div class="nfts">
+
+        <div class="nft" id="milady">
+          <a href="https://opensea.io/assets/ethereum/0x5af0d9827e0c53e4799bb226655a1de152a425a5/5558" target="_blank" rel="noopener noreferrer">
+            <img src="images/spoobs.png" alt="milady" title="Click to view on OpenSea">
+          </a>
+          <p>milady.png</p>
+        </div>
+
+        <div class="nft" id="B_I_T_C_H">
+          <a href="https://opensea.io/assets/ethereum/0x8a45fb65311ac8434aad5b8a93d1eba6ac4e813b/264" target="_blank" rel="noopener noreferrer">
+            <img src="images/that_b.png" alt="B_I_T_C_H" title="Click to view on OpenSea">
+          </a>
+          <p>that_b.png</p>
+        </div>
+
+        <div class="nft" id="remilio">
+          <a href="https://opensea.io/assets/ethereum/0xd3d9ddd0cf0a5f0bfb8f7fceae075df687eaebab/8960" target="_blank" rel="noopener noreferrer">
+            <img src="images/remilio.png" alt="remilio" title="Click to view on OpenSea">
+          </a>
+          <p>remilio.png</p>
+        </div>
+
+        <div class="nft" id="pixelady_1">
+          <a href="https://opensea.io/assets/ethereum/0x8fc0d90f2c45a5e7f94904075c952e0943cfccfd/2143" target="_blank" rel="noopener noreferrer">
+            <img src="images/pixelady_ak.png" alt="pixelady_1" title="Click to view on OpenSea">
+          </a>
+          <p>pixelady_1.png</p>
+        </div>
+
+        <div class="nft" id="pixelady_2">
+          <a href="https://opensea.io/assets/ethereum/0x8fc0d90f2c45a5e7f94904075c952e0943cfccfd/801" target="_blank" rel="noopener noreferrer">
+            <img src="images/pixelady_2.png" alt="pixelady_2" title="Click to view on OpenSea">
+          </a>
+          <p>pixelady_2.png</p>
+        </div>
+
+        <div class="nft" id="gods_remix">
+          <a href="https://opensea.io/assets/ethereum/0x285ea754d9418073cc87994f1de143f918551390/50319475212523392536078947525693334887144565359197920061410710727667964717260" target="_blank" rel="noopener noreferrer">
+            <img src="/images/gods_image.png" alt="gods_remix" title="Click to view on OpenSea">
+          </a>
+          <p>gods_remix.svg</p>
+        </div>
+
+        <div class="nft" id="yayo_1">
+          <a href="https://opensea.io/assets/ethereum/0x09f66a094a0070ebddefa192a33fa5d75b59d46b/1941" target="_blank" rel="noopener noreferrer">
+              <img src="images/yayo_1.png" alt="yayo_1" title="Click to view on OpenSea">
+          </a>
+          <p>yayo_1.png</p>
+        </div>
+
+        <div class="nft" id="yayo_2">
+          <a href="https://opensea.io/assets/ethereum/0x09f66a094a0070ebddefa192a33fa5d75b59d46b/3564" target="_blank" rel="noopener noreferrer">
+              <img src="images/yayo_2.png" alt="yayo_2" title="Click to view on OpenSea">
+          </a>
+          <p>yayo_2</p>
+        </div>
+
+        <div class="nft" id="brg">
+          <a href="https://opensea.io/assets/ethereum/0xd0cd0cd8f2d13fa44c19019ec5ec89d4cf0f54eb/1" target="_blank" rel="noopener noreferrer">
+              <img src="images/brg.jpeg" alt="brg" title="Click to view on OpenSea">
+          </a>
+          <p>brg.mp4</p>
+        </div>
+
+      </div>
+    </div>
+  </div>
+
+  <!-- Bera NFTs -->
+  <div class="container" id="beraNftsContainer" style="display:none">
+    <div class="banner-beras">
+        <div class="header-beras">
+            <button id="closeBeraNftsBtn" class="btn-close"></button>
+        </div>
+        <div class="nfts">
+            <!-- band_bear NFT -->
+            <div class="nft" id="band_bear">
+                <a href="https://opensea.io/assets/ethereum/0xb4e570232d3e55d2ee850047639dc74da83c7067/473" target="_blank" rel="noopener noreferrer">
+                    <img src="images/band.jpeg" alt="band_bear" title="Click to view on OpenSea">
+                </a>
+                <p>band_bear.png</p>
+              </div>
+
+            <!-- bit_bear NFT -->
+            <div class="nft" id="bit_bear">
+                <a href="https://opensea.io/assets/ethereum/0x32bb5a147b5371fd901aa4a72b7f82c58a87e36d/765" target="_blank" rel="noopener noreferrer">
+                    <img src="images/bit.gif" alt="bit_bear" title="Click to view on OpenSea">
+                </a>
+                <p>bit_bear.gif</p>
+            </div>
+
+        </div>
+    </div>
+  </div>
+
+<!-- folders left -->
+  <div class="folder" id="projects-folder">
+    <img src="images/folder.png" alt="folder">
+    <p>projects</p>
+  </div>
+  <div class="folder" id="jpegs-folder">
+    <img src="images/folder.png" alt="folder">
+    <p>jpegs</p>
+  </div>
+  <div class="folder" id="twitter">
+    <a href="https://www.twitter.com/Cattin0x/" target="_blank" rel="noopener noreferrer">
+      <img src="images/twitter_pixel_logo_icon_181924.png" alt="twitter">
+    </a>
+    <p>twitter</p>
+  </div>
+  <div class="folder" id="telegram">
+    <a href="https://t.me/cattin0x" target="_blank" rel="noopener noreferrer">
+      <img src="images/telegram.png" alt="telegram">
+    </a>
+    <p>telegram</p>
+  </div>
+
+<!-- folders right -->
+  <div class="folder" id="friend">
+    <a href="https://www.friend.tech/rooms/0x775c0a9f2fd3211d338de35be0cd36aef844adbc" target="_blank" rel="noopener noreferrer">
+      <img src="images/ft_pixel.png" alt="friend tech">
+    </a>
+    <p>friend</p>
+    <p>tech</p>
+  </div>
+
+  <div class="folder" id="arbitrum">
+    <a href="https://www.tally.xyz/profile/cattin.seedlatam.eth" target="_blank" rel="noopener noreferrer">
+      <img src="images/gov_pixel.png" alt="governance">
+    </a>
+    <p>arbitrum</p>
+    <p>gov</p>
+  </div>
+
+<!-- JS -->
+  <script src="js/script.js"></script>
+</body>
 </html>
